# trill

./: .gitmodules  .travis.yml  CMakeLists.txt  ConstraintSystem.swift  Package.swift  README.md  circle.yml
Sources/AST/: ASTContext.swift  ASTDumper.swift
Sources/Base/: ASTContext.swift  ASTTransformer.swift  Functions.swift  SourceLocation.swift  Statements.swift  Types.swift  Values.swift
Sources/ClangImporter/: ClangImporter.swift
Sources/Diagnostics/: DiagnosticEngine.swift  StreamConsumer.swift
Sources/IRGen/: BaseIRGen.swift  ClangInvocation.swift  FunctionIRGen.swift  RuntimeIRGen.swift  StatementIRGen.swift  TypeIRGen.swift  ValueIRGen.swift
Sources/Import/: ClangImporter.swift
Sources/Infrastructure/: StreamConsumer.swift  Utilities.swift
Sources/LLVM Wrappers/: LLVMWrappers.cpp
Sources/Parse/: BaseParser.swift  FunctionParser.swift  Lexer.swift  ValueParser.swift
Sources/Runtime/: RuntimeSearcher.swift  generics.cpp  metadata.cpp  metadata.h  runtime.h
Sources/Semantic Analysis/: Constraint.swift  ConstraintGenerator.swift  ConstraintSolver.swift  Mangler.swift  Sema.swift  SemaError.swift  Solver.swift  TypeChecker.swift
Sources/Source/: SourceFile.swift  SourceFileManager.swift  SourceLocation.swift
Sources/Utility Passes/: JavaScriptGen.swift
Sources/trill/: JSONDiagnosticConsumer.swift  Utilities.swift  main.swift
Trill.xcodeproj/: project.pbxproj
Trill.xcodeproj/project.xcworkspace/xcshareddata/: Trill.xcscmblueprint
cmake/modules/: PkgConfigs.cmake  SwiftPM.cmake
examples/: once.tr  protocol.tr  string-interpolation.tr  tuple.tr
runtime/: CMakeLists.txt
runtime/include/runtime/private/: Metadata.h
runtime/src/: CMakeLists.txt  Metadata.cpp  Runtime.cpp
runtime/src/private/: Metadata.cpp
stdlib/: AnyDictionary.tr  Mirror.tr  String.tr  bytearray.tr  print.tr
test/: unittest.tr
tools/trill-demangle/: main.swift
trill.xcodeproj/: project.pbxproj
trill.xcodeproj/project.xcworkspace/xcshareddata/: trill.xcscmblueprint
utils/: build  build-script
